[package]
name = "cli"
version = "0.1.0"
authors = ["L-oris <loris4526@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
you_dl = { path = "../you_dl" }
clap = "3.0.0-beta.2"
futures = "0.3"
indicatif = "0.15"
smol = "1"
