[package]
name = "you_dl"
version = "0.1.0"
authors = ["L-oris <loris4526@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compat = "0.1"
dialoguer = "0.7"
futures = "0.3"
qstring = "0.7"
regex = "1.4"
reqwest = { version = "0.10", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol = "1"
